# go_sim_py

./: README.md
Austausch Stephan/: Robosense_Airy.STEP:Zone.Identifier  sensor_kit_calibration.yaml  sensors.xacro
Austausch Stephan/vifware_unitree_go1_interface-main/vifware_unitree_go1_interface-main/vifware_unitree_go1_driver/: CMakeLists.txt  package.xml
Austausch Stephan/vifware_unitree_go1_interface-main/vifware_unitree_go1_interface-main/vifware_unitree_go1_driver/config/: unitree_go1_driver.param.yaml
Austausch Stephan/vifware_unitree_go1_interface-main/vifware_unitree_go1_interface-main/vifware_unitree_go1_driver/include/vifware_unitree_go1_driver/: enums.hpp  unitree_go1_driver.hpp
Austausch Stephan/vifware_unitree_go1_interface-main/vifware_unitree_go1_interface-main/vifware_unitree_go1_driver/launch/: vifware_unitree_go1_driver.launch.xml
Austausch Stephan/vifware_unitree_go1_interface-main/vifware_unitree_go1_interface-main/vifware_unitree_go1_driver/src/: unitree_go1_driver.cpp  unitree_go1_driver_node.cpp
Austausch Stephan/vifware_unitree_go1_interface-main/vifware_unitree_go1_interface-main/vifware_unitree_go1_interface/: CMakeLists.txt  package.xml
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/autoware_interface/: CMakeLists.txt  README.md  package.xml
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/autoware_interface/include/autoware_interface/: autoware_ad_api_client.hpp  autoware_interface.hpp  conversions.hpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/autoware_interface/src/: autoware_ad_api_client.cpp  autoware_interface.cpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/longitudinal_control/: CMakeLists.txt  README.md  package.xml
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/longitudinal_control/include/longitudinal_control/: longitudinal_control.hpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/longitudinal_control/src/: longitudinal_control.cpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/omnidrive_control/: CMakeLists.txt  package.xml
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/omnidrive_control/include/omnidrive_control/: error_handling.hpp  odometry.hpp  omnidrive_control.hpp  wheel.hpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/omnidrive_control/src/: odometry.cpp  omnidrive_control.cpp  omnidrive_control_parameter.yaml  wheel.cpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/omnidrive_control/test/: test_load_omnidrive_controller.cpp  test_omnidrive_controller.cpp  test_omnidrive_controller.yaml
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/vifware_vehicle_interface_common/: CMakeLists.txt  package.xml
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/vifware_vehicle_interface_common/include/vifware_vehicle_interface_common/: error_handling.hpp  timeoutwatchdog.hpp  utils.hpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/vifware_vehicle_interface_common/include/vifware_vehicle_interface_common/filters/: iir_flt.hpp  lin_vel_obs.hpp  mov_avg_flt.hpp  scalar_filter.hpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/vifware_vehicle_interface_common/src/: timeoutwatchdog.cpp  timeoutwatchdog.cpp:Zone.Identifier
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/vifware_vehicle_interface_common/src/filters/: iir_flt.cpp  lin_vel_obs.cpp  mov_avg_flt.cpp
Austausch Stephan/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces-main/vifware_vehicle_interfaces/: CMakeLists.txt  package.xml
docker/: Dockerfile  compose.yml
gazebo_sim/: CMakeLists.txt  package.xml
gazebo_sim/config/: ekf.yaml  nav2_params.yaml
gazebo_sim/launch/: gazebo_multi_nav2_world.launch.py  gazebo_multi_world.launch.py  launch.py  launch_sim.launch.py  sim.launch.py
gazebo_sim/rviz/: nav2_default_view.rviz
gazebo_sim/src/: test_action.py
gazebo_sim/world/: cambridge.world  empty.world
gazebo_sim/xacro/: depthCamera.xacro  leg.xacro  robot.xacro  ultraSound.xacro
go1_controller/: CMakeLists.txt  package.xml
go1_controller/launch/: robot_controller.launch.py
go1_controller/scripts/: QuadrupedOdometryNode.py  cmd_vel_pub.py  robot_controller_gazebo.py
go1_controller/scripts/RobotController/: CrawlGaitController.py  GaitController.py  PIDController.py  QuadrupedOdometryNode.py  RestController.py  RobotController.py  StandController.py  StateCommand.py  TrotGaitController.py
go1_controller/scripts/RoboticsUtilities/: Transformations.py
go1_description/: CMakeLists.txt  package.xml
go1_description/config/: check_joint.rviz  ekf.yaml  gz_bridge.yaml  nav2_params.yaml  (+2 more)
go1_gazebo/: CMakeLists.txt  package.xml
go1_gazebo/config/: nav2_params.yaml  robots.yaml
go1_gazebo/ff_examples_ros2/: teleworker_skill_dummy.py  teleworker_skill_dummy_action.py
go1_gazebo/launch/: classic_gazebo.launch.py  gazebo_multi_nav2_world.launch.py  launch.py  rviz_launch.py  sim.launch.py
go1_gazebo/launch/nav2/: bringup_launch.py  localization_launch.py  navigation_launch.py
go1_gazebo/maps/: cambridge.yaml
go1_gazebo/models/cafe/meshes/: cafe.dae
go1_gazebo/models/cafe_table/meshes/: cafe_table.dae
go1_gazebo/src/: update_coordinate.py
go1_gazebo/world/: cafe.world
go1_gazebo/xacro/: gazebo.xacro  robot.xacro
go1_joystick/: CMakeLists.txt  package.xml
go1_joystick/launch/: ramped_joystick.launch.py
go1_joystick/scripts/: ramped_joystick.py
go2_gazebo/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
joystick/: CMakeLists.txt  package.xml
quadropted_msgs/: CMakeLists.txt
quadruped_odometry/: CMakeLists.txt  package.xml
robot_msgs/: CMakeLists.txt  package.xml
(+109 files in other folders)
