<?xml version="1.0"?>
<package format="3">
  <name>go1_controller</name>
  <version>0.0.1</version>
  <description>Go1 robot controller package</description>

  <maintainer email="kaisar@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
