<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_interface</name>
  <version>0.0.0</version>
  <description>component to communicate to autoware</description>
  <maintainer email="franz.rammerstorfer@v2c2.at">Franz Rammerstorfer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>diagnostic_updater</depend>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>vifware_msgs</depend>
  <depend>vifware_vehicle_interface_common</depend>
  <depend>vifware_vehicle_interface_msgs</depend>
  <depend>iceoryx_hoofs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
