<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnidrive_control</name>
  <version>0.0.0</version>
  <description>omnidrive controller package</description>
  <maintainer email="franz.rammerstorfer@v2c2.at">Franz Rammerstorfer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>vifware_vehicle_interface_common</depend>
  <depend>realtime_tools</depend>
  <depend>iceoryx_hoofs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
